@@ -21,6 +21,7 @@ Date:
         - Detect lightning rods/collectors as electricity sources, and estimate the required accumulator count.
     Fixes:
         - When creating launch recipes, obey the rocket capacity, not the item stack size.
+        - Improve detection of special (e.g. barrelling, caging) recipes, especially with SA's recycling recipes.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.7.0
 Date: January 27th 2025
